--- a/css/reset.css
+++ b/css/reset.css
@@ -45,7 +45,7 @@ input {
 	vertical-align: middle;
 	font: inherit;
 	color: inherit;
-	background: inherit;
+	background: transparent;
 	padding: 0;
 	margin: 0;
 	outline: 0;
